iptables/iptables.rules
*filter

# Default policy.
# Drop all INPUT and allow all FORWARD and OUTPUT traffic. 
:INPUT DROP
:FORWARD ACCEPT
:OUTPUT ACCEPT

# INPUT chain - whitelist rules.
# Allow access to services only from local network.
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.0.1/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.0.1/24 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 192.168.0.1/24 -p tcp -m tcp --dport 8200 -j ACCEPT
-A INPUT -s 192.168.0.1/24 -p tcp -m tcp --dport 10022 -j ACCEPT
-A INPUT -s 192.168.0.1/24 -p tcp -m tcp --dport 9091 -j ACCEPT
-A INPUT -s 192.168.0.1/24 -p tcp -m tcp --dport 3389 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# OUTPUT chain - blacklist rules.
# Reject traffic from a user unless it goes through a specific interface.
-A OUTPUT -d 192.168.0.1/24 -p tcp -m tcp --sport 9091 -j ACCEPT
-A OUTPUT -m owner --uid-owner <UID> ! -o <INTERFACE> -j REJECT

COMMIT
